--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
     %link{:href => "/apple-touch-icon.png", :rel => "apple-touch-icon"}/
     
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Montserrat'
-    = javascript_include_tag 'html5shiv'
+    -#= javascript_include_tag 'html5shiv'
     = stylesheet_link_tag 'application'
     = csrf_meta_tag
     
