done with slideshow

--- a/app/assets/stylesheets/partials/_base.css.sass
+++ b/app/assets/stylesheets/partials/_base.css.sass
@@ -1,6 +1,12 @@
 @import 'compass'
 
-$green: #298278
+$green: #288278
 $blue: #0C1D2D
-$lite-blue: #414e57
-$white-blue: #dbdde0
+$lite-blue: #3e4a58
+
+$white: #fff
+
+$grey1: #d1d5d8
+$grey2: #999999
+$grey3: #bababa
+$grey4: #e6e6e6
