--- a/app/assets/stylesheets/partials/_footer.css.sass
+++ b/app/assets/stylesheets/partials/_footer.css.sass
@@ -35,7 +35,7 @@ footer
 
 body.home.index
   footer
-    background: #fff
+    background: $white
     .design-link
       @extend .icon-design-logo
     .otc-link
@@ -50,9 +50,9 @@ body.home.index
     .inner
       background: $blue image-url("saw-white-down.png") repeat-x center top
       .title h1
-        color: $white-blue
+        color: $grey1
       .contact a
-        color: #fff
+        color: $white
 
 body.home.comercial
   footer
@@ -69,7 +69,7 @@ body.home.comercial
       @extend .icon-email
       
     .inner
-      background: #fff image-url("saw-dark-down.png") repeat-x center top
+      background: $white image-url("saw-dark-down.png") repeat-x center top
       .title
         h1
           color: $green
