--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,23 +1,7 @@
-%article
-  .slideshow
-    %ul
-      %li
-        =image_tag 'img1.png', :width=> 600
-      %li
-        =image_tag 'img2.png', :width=> 600
-      %li
-        =image_tag 'img3.png', :width=> 900
-      %li
-        =image_tag 'img1.png', :width=> 600
-      %li
-        =image_tag 'img2.png', :width=> 600
-      %li
-        =image_tag 'img3.png', :width=> 900
+=render :partial => "home/article"
+=render :partial => "home/article"
 
-#icons(style='display:none')
+#icons
   .icons
-    %i.icon-cross-sign-white 
-    %i.icon-envelope-down 
-    %i.icon-right-arrow 
     %i.icon-tag-arrow
 
