--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -19,8 +19,13 @@
   margin: 0
   padding: 0 0 50px 0
 
+
+body.home.index
+  background: $white
+body.home.comercial
+  background: $blue
 article
-  background: #fff
+  //background: #fff
   //position: fixed
   //position: relative
   top: 0
