--- a/app/views/home/comercial.html.haml
+++ b/app/views/home/comercial.html.haml
@@ -1,16 +1,1 @@
-%article
-  .slideshow
-    %ul
-      %li
-        =image_tag 'img1.png', :width=> 600
-      %li
-        =image_tag 'img2.png', :width=> 600
-      %li
-        =image_tag 'img3.png', :width=> 900
-      %li
-        =image_tag 'img1.png', :width=> 600
-      %li
-        =image_tag 'img2.png', :width=> 600
-      %li
-        =image_tag 'img3.png', :width=> 900
-
+=render :partial => "home/article"
