--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,6 @@
+#debug
+%article.first.full-bg(style="background-image: url(/assets/cover.jpg)")
+
+
 =render :partial => "home/article"
 =render :partial => "home/article"
-
-#icons
-  .icons
-    %i.icon-tag-arrow
-
