--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -22,19 +22,31 @@
 
 body.home.index
   background: $white
+  article
+    background: $white
+    &:nth-child(even)
+      background: $grey4
 body.home.comercial
   background: $blue
+  article
+    background: $blue
+
+header, footer
+  top: 0
+  left: 0
+  width: 100%
+
 article
-  //background: #fff
-  //position: fixed
-  //position: relative
   top: 0
   left: 0
   width: 100%
   min-height: 100%
-  //-moz-box-shadow: 0 0 12px #666
-  //-webkit-box-shadow: 0 0 12px #666
-  //z-index: 99999
+
+
+  &.full-bg
+    width: 100%
+    height: 100%
+    background-size: cover
 
 body
   a
