--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -18,6 +18,9 @@ body.home.comercial
   article
     background: $blue
 
+header, article, footer
+  +transition(margin 1.2s ease)
+
 header, footer
   top: 0
   left: 0
@@ -28,7 +31,6 @@ article
   left: 0
   width: 100%
   min-height: 100%
-  +box-shadow(0 6px 12px $grey1)
   &.full-bg
     width: 100%
     height: 100%
