--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -36,6 +36,9 @@ article
     height: 100%
     background-size: cover
 
+.img-wrapper .tag
+  display: none
+  
 body
   a
     text-decoration: none
