--- a/app/views/home/comercial.html.haml
+++ b/app/views/home/comercial.html.haml
@@ -1,84 +1,3 @@
-%article
+-@articles.each do |a|
+  =render :partial => "home/article",:locals => {:article => a} 
 
-
-
-  %header
-    %a#header-tab{:href=>root_path}
-      %span personal
-      %i.icon-tab
-    .inner
-      .top
-        .contact
-          .envelope
-            %i.icon
-          .emails
-            %span.label personal:
-            %a(href='#') javi@onthecorner.com.ar
-            %br
-            %span.label comercial:
-            %a(href='#') quiero@hellocrudo.com
-          .links
-            %a(href='#') www.javiobando.tumblr.com
-            %br
-            %a(href='#') www.onthecorner.com.ar
-        .portfolio
-          %a.pdf-link(href='#')
-            %i.icon-briefcase
-            %span descargar
-      .middle
-        .cp-links
-          %a.contact-link(href="#")
-            contacto
-          %a.plus-sign(href="#")
-            %i.icon
-          %a.portfolio-link(href="#")
-            portfolio
-        .title
-          %h1 Javi Obando
-          %h2 fotografía
-
-
-
-  .slideshow
-    %i.icon-right-arrow
-    %i.icon-left-arrow
-    %ul
-      %li
-        .img-wrapper
-          %a.tag(href="#") 
-            %i.icon-tag-arrow
-            %span publicidad        
-          =image_tag 'img2.png', :width=> 600, :height=> 900
-        .img-data
-          .img-data-handler
-            %i.icon
-          .img-data-wrapper
-            .top
-              %span cliente:
-              %a(href="#") titulo de la foto, argentina
-              %span estilismo:
-              %a(href="#") flora grzetic
-              %span asistente de la foto:
-              %a(href="#") mariano pizano
-            .bottom
-      %li
-        .img-wrapper
-          =image_tag 'img5.jpg', :width=> 600, :height=> 900
-        .img-data
-          .img-data-handler
-            %i.icon
-          .img-data-wrapper
-            .top
-              %span cliente:
-              %a(href="#") titulo de la foto, argentina
-              %span estilismo:
-              %a(href="#") flora grzetic
-              %span asistente de la foto:
-              %a(href="#") mariano pizano
-            .bottom
-
-
-
-
-
-=render :partial => "home/article"
