--- a/app/assets/stylesheets/partials/_footer.css.sass
+++ b/app/assets/stylesheets/partials/_footer.css.sass
@@ -49,8 +49,11 @@ body.home.index
       
     .inner
       background: $blue image-url("saw-white-down.png") repeat-x center top
-      .title h1
-        color: $grey1
+      .title 
+        h1
+          color: $grey1
+        h2
+          color: $green
       .contact a
         color: $white
 
