--- a/app/assets/stylesheets/admin.css.sass
+++ b/app/assets/stylesheets/admin.css.sass
@@ -10,3 +10,22 @@
 body.rails_admin #markdown-editor-dialog .form-horizontal
   input, textarea
     width: 500px
+
+
+
+#selectable
+  list-style-type: none
+  margin: 0
+  padding: 0
+  width: 60%    
+  .ui-selecting
+    background: #FECA40
+  .ui-selected
+    background: #F39814
+    color: white
+  li
+    margin: 3px
+    padding: 0.4em
+    font-size: 1.4em
+    height: 18px
+
