--- a/app/assets/stylesheets/partials/_header.css.sass
+++ b/app/assets/stylesheets/partials/_header.css.sass
@@ -65,6 +65,11 @@ header
     .plus-sign .icon
       +rotate
 
+
+  &.contact-open .top .portfolio, &.portfolio-open .top .contact
+    display: none
+
+
 body.home.index
   header
     .inner
