--- a/app/assets/stylesheets/devise.css.sass
+++ b/app/assets/stylesheets/devise.css.sass
@@ -48,6 +48,8 @@ body.sessions.new
       h2, label
         color: #eee
         font-weight: bold
+      input.span2
+        width: 100%
       input.btn
         margin-top: 10px
 
