--- a/app/assets/stylesheets/partials/_slideshow.css.sass
+++ b/app/assets/stylesheets/partials/_slideshow.css.sass
@@ -62,6 +62,8 @@
           .img-data-wrapper .top
             span, a
               +opaque
+        &.hidden
+          +transparent
       &.current
         cursor: default
         .img-wrapper
