i am bored of this

--- a/app/assets/stylesheets/partials/_slideshow.css.sass
+++ b/app/assets/stylesheets/partials/_slideshow.css.sass
@@ -9,7 +9,7 @@
     +opaque
     +transition(opacity 1s ease)
     position: absolute
-    top: 472px  // ss.height/2 + ss.paddingTop - self.height/2 : 450 + 30 - 8
+    //top: 472px  // ss.height/2 + ss.paddingTop - self.height/2 : 450 + 30 - 8
     z-index: 20
     cursor: pointer
   ul
@@ -106,7 +106,8 @@ body.home.index
     .img-data
       .img-data-handler .icon
         @extend .icon-plus-sign2
-      span
+      color: #C5C7C9
+      strong
         color: #2E3D4A
       a
         color: #C5C7C9
@@ -121,7 +122,8 @@ body.home.comercial
     .img-data
       .img-data-handler .icon
         @extend .icon-plus-sign2-white
-      span
+      color: #FCFCFC
+      strong
         color: $grey3
       a
         color: #FCFCFC
