improved slide scroll smoothness

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -12,15 +12,15 @@
         %i.icon
       .emails
         %span.label personal:
-        %a(href='#') javi@onthecorner.com.ar
+        %a(href='mailto:javi@onthecorner.com.ar') javi@onthecorner.com.ar
         %br
         %span.label comercial:
-        %a(href='#') quiero@hellocrudo.com
+        %a(href='mailto:quiero@hellocrudo.com') quiero@hellocrudo.com
       .links
-        %a(href='#') www.javiobando.tumblr.com
+        %a(href='http://www.javiobando.tumblr.com') www.javiobando.tumblr.com
         %br
-        %a(href='#') www.onthecorner.com.ar
+        %a(href='http://www.onthecorner.com.ar') www.onthecorner.com.ar
       .logos
-        %a.otc-link(href='#') on the corner
-        %a.crudo-link(href='#') crudo
-    %a.design-link(href='#') diseno
+        %a.otc-link(href='http://onthecornerstreetstyle.blogspot.com.ar/') on the corner
+        %a.crudo-link(href='http://www.hellocrudo.com/') crudo
+    %a.design-link(href='http://www.entrecasaestudio.com.ar/') diseno
