--- a/app/assets/stylesheets/partials/_header.css.sass
+++ b/app/assets/stylesheets/partials/_header.css.sass
@@ -74,6 +74,7 @@ body.home.index
   header
     .inner
       .middle
+        height: 2000px //prevent FOUC
         background: rgba($white, 0.7)
         .title
           margin-top: 110px
