--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
     = stylesheet_link_tag 'application'
     = csrf_meta_tag
     
-  %body{:class => body_classes.join(' ')}
+  %body{:class => body_classes.join(' ')+' loading'}
     =render :partial => "layouts/header"
     =render :partial => "layouts/alerts"
     = yield
