added portfolio link and improved page loading

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -18,7 +18,7 @@
           %br
           %a(href='http://www.onthecorner.com.ar') www.onthecorner.com.ar
       .portfolio
-        %a.pdf-link(href='#')
+        %a.pdf-link(href='/javi-obando_portfolio.pdf')
           %i.icon-briefcase
           %span descargar
     .middle
